﻿IMPROVEMENTS / FIXES
- UI:
	- Updated German localisation from EzBro.
	- Fix some localisation tags and duplicates.
- AI / WM:
	- Don't reset PID values to stored auto-tuning ones when switching the clamped/unclamped toggle.

v1.6.10.0
IMPROVEMENTS / FIXES
- General:
	- Fix Krakensbane adjustments when the active vessel dies.
	- Make sure various pooled objects are disabled when leaving the flight scene.
	- Battle damage fuel leak rates now scale by (bullet caliber)^2, instead of (bullet caliber). Fuel leak rates for 20mm caliber remain the same, calibers higher and lower than 20mm will now have higher and lower leak rates, respectively.
	- Fixes for Kerbal Safety not always detecting EVA kerbals.
- UI:
	- Updated Chinese localization thanks to user Marv1n-M.
	- Fix part filtering by search terms in the editors.
	- Adjust timing and conditions for auto-camera switching to and away from missiles.
	- Fix tracer visuals when the active vessel dies.
	- New Opacity option in BDA Team Icons to set icon opacity.
	- Adds CASE ammo explosion radii visualizer in the editors, enable via F3.
	- Continuous Spawn now shows lives remaining in the Vessel Switcher GUI.
	- Add a UI scaling option for BDA's windows.
	- Improve the logarithmic scaling in the radar windows.
	- Add a 'withZero' parameter to semi-log sliders that allows them to include 0 and uses lower precision for the smallest range.
	- Add a 'GUIUtils.HorizontalSemiLogSlider' for simplifying horizontal sliders for semi-log float ranges outside of PAWs.
	- Add a fractional component to the precision of semi-log sliders for rounding, e.g., sigFig = 1.5f gives '..., 8.5, 9, 9.5, 10, 15, 20, ...'. Switch the spawn distance slider to use this.
	- Add a power-law float range type and 'GUIUtils.HorizontalPowerSlider' for simplifying horizontal sliders for power-law float ranges outside of PAWs.
- AI / WM: