@@ -587,6 +587,7 @@ Localization
         #LOC_BDArmory_PIDAutoTuningRecenteringDistance = Auto-Tuning Recentering Distance (km)
         #LOC_BDArmory_PIDAutoTuningFixedP = Auto-Tuning Fixed P
         #LOC_BDArmory_PIDAutoTuningClampMaximums = Auto-Tuning Clamp Max
+        #LOC_BDArmory_AutoTuningSummary = Auto-Tuning Summary
         
         #LOC_BDArmory_TargetPriority = Target Priority
         #LOC_BDArmory_TargetPriority_CurrentTarget = Current Target
